Wards about q in p3.

--- a/denotations.tex
+++ b/denotations.tex
@@ -42,9 +42,9 @@
 
   \item[$ $]  --- x;
 
-  \item[$\tau_q$]  --- характерное время усреднения критерия, $[s]$;
+  \item[$\tau_q$]  --- характерное время усреднения критерия, $[s]$, (стр.~\pageref{atu:d:tau_q});
 
-  \item[$a_q = \frac{1}{\tau_q} $]  --- величина, обратная $\tau_q$, $[s^{-1}]$;
+  \item[$a_q = \frac{1}{\tau_q} $]  --- характерна частота среза критерия, величина, обратная $\tau_q$, $[s^{-1}]$, (стр.~\pageref{atu:d:a_q});
 
   \item[$q_\gamma $]  --- величина, определяющая рабочий диапазон функции качества, $[Q]$;
 
