--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -11,8 +11,10 @@
 
 
 На рис.~\ref{atu:f:lor_diff_x0} приведён пример, показывающий
-различие траекторий для системы Лоренца~\cite{moon_chaotic_vibr}:
+различие траекторий для системы Лоренца~\cite{moon_chaotic_vibr}
 при малом возмущении значений начальных условий.
+Относительная разница в значении переменной состояния $x_0$
+составляет~$1\times 10^{-8}$.
 
 \begin{figure}[h!]
   \centerline{
@@ -27,7 +29,8 @@
 
 На рис.~\ref{atu:f:lor_diff_sigma} приведён пример, показывающий
 различие траекторий для системы Лоренца
-при малом возмущении значений параметра $\sigma$.
+при малом возмущении значений параметра $\sigma$,
+которое составляет в относительных единицах~$1 \time 10^{-9}$.
 
 \begin{figure}[h!]
   \centerline{
@@ -319,12 +322,71 @@ $q_m$ принимает значение, наиболее близкое к з
 
 % Свёртка с чем-то.
 
-Как уже было отмечено, для успешности процесса идентификации требуется
-построение различных интегральных критериев, зависящих,
-хотя бы в первом приближении
-от величины идентифицируемого параметра. Конкретный вид определяется самим идентифицируемым
-объектом. При этом, довольно часто (но не всегда) в качестве основы для такого критерия выступает
-некая энергетическая зависимость. С учётом усреднения на требуемом интервале,
+Понятие интегрального критерия, применяемого к реальным
+задачам, подразумевает не только собственно взятие или оценку интеграла
+та выбранном временном интервале, но и нормирование на величину этого интеграла.
+Это даёт возможность применяемым критериям не иметь явной мультипликативной
+зависимости от времени, и описывать собственно свойства объекта.
+Таким образом, интегральный критерий можно представить как
+разновидность усреднения для выражения, формирующего данный критерий.
+Однако, такие виды усреднения, как среднее арифметическое, медиана и т.д.
+неприменимы для формирования критерия для систем с изменяющимся параметром.
+Для реализации возможности такого определения необходимо ограничить
+по времени усредняемый диапазон.
+Оценку этого ограничения обозначим
+\label{atu:d:tau_q}$\tau_q$.
+В какой-то мере это эквивалентно
+применению фильтра нижних частот с частотой среза
+\label{atu:d:a_q}$a_q = 1 / \tau_q$.
+Рассмотрим возможные реализации такого усреднения.
+
+Самый очевидный способ ограниченного по времени усреднения ---
+скользящее среднее. % TODO: ref
+В применяемых терминах, если базовое выражение для формирования критерия
+обозначить как $x(t)$, то этот способ усреднения имеет вид:
+%
+\begin{equation}
+  q_{x,a}(t) =
+  \frac{1}{\tau_q}
+  \int\limits_{t-\tau_q}^{t} x(t) \, dt.
+  \label{atu:eq:moving_avarage}
+\end{equation}
+
+Суффиксом ``,a'' в определении критерия будем обозначать
+именно это определение.
+Несмотря на простоту определения, хорошие частотные характеристики,
+применения этого метода в реальных задачах довольно неудобно.
+Прежде всего, при численной реализации такого интегрирования
+необходимо хранить большое количество предыдущих значений,
+алгоритмически обеспечить корректный старт при $\tau_q$.
+Также при реализации этого метода эффективным алгоритмом,
+при котором количество операций на каждом шагу не зависит от $\tau_q$,
+возникают вопросы накопления ошибок вычисления.
+
+Менее затратным (с точки зрения объёма вычислений)
+является метод экспоненциального сглаживания,
+динамику которого применительно к сигналу $x(t)$ можно описать уравнением:
+%
+\begin{equation}
+\od{q_{x,k}}{t}
+=
+\frac{1}{\tau_q} \left( x(t) - q_{x,l}(t) \right)
+\label{atu:eq:qlin}
+\end{equation}
+
+Численная реализация подобного сглаживания не представляет
+проблем. Существуют эффективные, в том числе аппаратные
+реализации (\ref{atu:eq:qlin}) в дискретном представлении (БИХ-фильтры).
+Также возможно, в случае наличия информации о спектральном составе $x(t)$
+применении более сложных фильтров для задачи усреднения.
+Однако, при идентификации хаотических систем непрерывность спектра
+будет препятствовать применению эффективных фильтров.
+
+
+
+
+
+С учётом усреднения на требуемом интервале,
 один из простых видов критерия может быть задан как
 %
 \begin{equation}
@@ -332,14 +394,12 @@ $q_m$ принимает значение, наиболее близкое к з
 =
 \frac{1}{\tau_q} \left( x^2(t) - q_{x^2}(t) \right)
 ,
-\label{atu:eq:qlin}
+\label{atu:eq:qlin2}
 \end{equation}
 %
 %\noindent
 где $\tau_q$ -- характерное время оценивания, $x(t)$ -- выбранная переменная состояния системы.
 
-Скользящее среднее:
-$q_{ma}$??
 
 Чернавскиий~\cite{chernavskii_syn_info}.
 
