Add examples for q definitions

--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -24,6 +24,7 @@
 В линейном приближении это соответствует положительным значениям
 коэффициентов Ляпунова~\cite{magni_theory_dyn_chaos,moon_chaotic_vibr}.
 
+Чернавскиий~\cite{chernavskii_syn_info}.
 
 % }}}1
 
