--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1,6 +1,6 @@
 \chapter{Поисковые методы идентификации}
 
-\section{Критерии идентификации}
+\section{Критерии идентификации} % {{{1 _criteria_
 
 \subsection{Свойства и параметры критериев идентификации} % {{{2
 
@@ -13,7 +13,7 @@
 На рис.~\ref{atu:f:lor_diff_x0} приведён пример, показывающий
 различие траекторий для системы Лоренца~\cite{moon_chaotic_vibr}
 при малом возмущении значений начальных условий.
-Относительная разница в значении переменной состояния $x_0$
+Относительная разница в начальном значении переменной состояния $x_0$
 составляет~$1\times 10^{-8}$.
 
 \begin{figure}[h!]
@@ -30,7 +30,7 @@
 На рис.~\ref{atu:f:lor_diff_sigma} приведён пример, показывающий
 различие траекторий для системы Лоренца
 при малом возмущении значений параметра $\sigma$,
-которое составляет в относительных единицах~$1 \time 10^{-9}$.
+которое составляет в относительных единицах~$1 \times 10^{-9}$.
 
 \begin{figure}[h!]
   \centerline{
@@ -294,7 +294,7 @@ $q_m$ принимает значение, наиболее близкое к з
 не только параметрами системы, но и свойствами самой системы измерения,
 а также процессом взаимодействия системы измерения с моделями. При этом
 возможны весьма нетривиальные явления, такие как параметрический
-резонанс, распространение параметрических волн на множестве моделей и т.д.
+резонанс, распространение параметрических волн на множестве моделей и~т.д.
 
 Также существенную роль могут играть как шумы измерения, так и побочные
 эффекты от процесса фильтрации шумов.
@@ -368,12 +368,14 @@ $q_m$ принимает значение, наиболее близкое к з
 динамику которого применительно к сигналу $x(t)$ можно описать уравнением:
 %
 \begin{equation}
-\od{q_{x,k}}{t}
+\od{q_{x,l}}{t}
 =
 \frac{1}{\tau_q} \left( x(t) - q_{x,l}(t) \right)
 \label{atu:eq:qlin}
 \end{equation}
 
+Суффикс ``,l'' в дальнейшем изложении будет применяться
+для усреднения вида~(\ref{atu:eq:qlin}).
 Численная реализация подобного сглаживания не представляет
 проблем. Существуют эффективные, в том числе аппаратные
 реализации (\ref{atu:eq:qlin}) в дискретном представлении (БИХ-фильтры).
@@ -383,29 +385,66 @@ $q_m$ принимает значение, наиболее близкое к з
 будет препятствовать применению эффективных фильтров.
 
 
+Если $q(x(t))$  --- подходящий для задачи идентификации критерий,
+причём $x(t)>0 \forall t>0$,
+$f(x)$ --- строго монотонная функция $\forall x > 0 $,
+то и $q(f(x(t))$ --- тоже подходящий для рассматриваемой задачи критерий.
+Тем не менее, близость полученной интегральной зависимости в стационарном случае $q(p)$
+к линейной позволяет системе идентификации функционировать в близких режимах
+на всей области определения~$p$. Для достижения этой цели
+при выборе вида критерия следует, если это возможно,
+использовать физические соображения для приближения к линейной зависимость $q(p)$,
+или же, использовать перебор для выбора наиболее подходящего определения.
+С учетом (\ref{atu:eq:Ek_v})--(\ref{atu:eq:Er}) приведём
+примеры подобных определений.
 
 
-
-С учётом усреднения на требуемом интервале,
-один из простых видов критерия может быть задан как
-%
 \begin{equation}
-\od{q_{x^2}}{t}
+\od{q_{x^2,l}}{t}
 =
-\frac{1}{\tau_q} \left( x^2(t) - q_{x^2}(t) \right)
+\frac{1}{\tau_q} \left( x^2(t) - q_{x^2,t}(t) \right)
 ,
-\label{atu:eq:qlin2}
+\label{atu:eq:qx2l}
 \end{equation}
-%
-%\noindent
-где $\tau_q$ -- характерное время оценивания, $x(t)$ -- выбранная переменная состояния системы.
 
+\begin{equation}
+  q_{xr,a}(t) =
+  \sqrt{
+    \frac{1}{\tau_q}
+    \int\limits_{t-\tau_q}^{t} x^2(t) \, dt
+  }.
+  \label{atu:eq:qxra}
+\end{equation}
 
-Чернавскиий~\cite{chernavskii_syn_info}.
+\begin{equation}
+  q_{|x|,a}(t) =
+  \frac{1}{\tau_q}
+  \int\limits_{t-\tau_q}^{t} |x|(t) \, dt
+  .
+  \label{atu:eq:qxma}
+\end{equation}
+
+\begin{equation}
+  q_{xy^{0.5},a}(t) =
+  \sqrt{
+    \frac{1}{\tau_q}
+    \int\limits_{t-\tau_q}^{t} x(t)y(t) \, dt
+  }
+  .
+  \label{atu:eq:qxy05a}
+\end{equation}
+
+При этом следует отметить, что в стационарном случае, при значительных величинах $\tau_q$,
+различные методы усреднения дают практически неразличимые результаты, и зависимости
+как от $\tau_q$, так и от $t$ становятся пренебрежимо малыми.
+Получившуюся зависимость от параметра объекта будем обозначать $q(p)$.
+
 
 % }}}2
 
-% }}}1
+% TODO dynamic q props
+
+% }}}1 _criteria_
 
 
 
