Rename Lor id method: Fblvd1_2 to Fl2nlosdlcA

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -3044,7 +3044,7 @@ $p_{leW}$.
 ``xl2nlosdlcA'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом
  и непосредственным использованием выходов объекта и моделей.
 
-``Fl2nlsdlcA.$q_{x^2}$'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом,
+``Fl2nlosdlcA.$q_{x^2}$'' --- Адаптивно-поисковый метод с двумя моделями и двумя УГПК с общим сбросом,
  использующий функцию качества применительно к критерию $q_{x^2}$.
 
 \Cmt{Может имеет смысл использовать псевдонимы для самых полезных или часто используемых методов?}
