Rearrang and fixup in testsys.

--- a/p5/chua_testsys.tex
+++ b/p5/chua_testsys.tex
@@ -231,7 +231,7 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
 
 
 
-\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Дуффинга}  % {{{2
+\subsection{Влияние параметров системы идентификации на ошибку идентификации для системы Чуа}  % {{{2
 
 
 
@@ -291,4 +291,4 @@ $\mu$ (рис.~\ref{atu:f:chua_spectrum}). Как следует из графи
 
 % }}}1
 
-% vim: fdm=marker ft=tex
+% vim: fdm=marker foldlevelstart=2 fdc=4 ft=tex
