--- a/p5/spr_a_testsys.tex
+++ b/p5/spr_a_testsys.tex
@@ -500,4 +500,4 @@ $\overline{e}_{r*}(k_e)$ при применении метода FAlv5.3r.$q_{x
 
 % }}}1
 
-% vim: fdm=marker ft=tex
+% vim: fdm=marker foldlevelstart=2 fdc=4 ft=tex
