--- a/p5/fric_testsys.tex
+++ b/p5/fric_testsys.tex
@@ -206,4 +206,4 @@ $q_\gamma$ (рис.~\ref{atu:f:fric_e_qgamma})
 
 % }}}1
 
-% vim: fdm=marker ft=tex
+% vim: fdm=marker foldlevelstart=2 fdc=4 ft=tex
