Aref start update

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -1195,7 +1195,7 @@ $p_l$, $q_l$, $p_r$, $q_r$.
 агента значением $q_o$. С учётом всего вышеперечисленного,
 задача определения $p_e$ заключается в нахождении такого $p$,
 которое соответствует пересечению неизвестной кривой,
-заданной тремя точками, с прямой $q=q_0$.
+заданной тремя точками, с прямой $q=q_o$.
 Формально, с учётом введённых ограничений,
 три точки однозначно определяют параболу.
 Однако, применение параболической аппроксимации в условиях
