Next copy + translate p3 -> aref

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -1343,11 +1343,472 @@ $p_{d0}$ ---
 де $ f_t $ --- сума всіх діючих `` сил '',
 $ v_f = 1 / \nu $ --- коефіцієнт
 пропорційності. Даний підхід, в порівнянні з попереднім, вимагає менших
-обчислювальних витрат, і проявляє велику стійкість. Більш слабкі пошукові
+обчислювальних витрат, і проявляє більшу стійкість. Більш слабкі пошукові
 здібності компенсуються застосуванням безлічі агентів. Тому, в подальшому
 викладі для многомодельного систем буде застосовуються саме цей підхід.
 
 Існують методи адаптивно-пошукової ідентифікації, що визначають свої правила опису пошукової динаміки.
+
+
+Розглянемо набір підходів до визначення пошуковим координатором точки максимуму
+функції якості, а отже --- значення ідентифікованого параметра
+\cite{atu_st99,atu_jacs2015}.
+
+Из всего списка выходных сигналов поисковых агентов координатор использует
+только необходимое ему подмножество. В качестве координат может использоваться
+как $p_c$, так и $p_e$. В качестве уровня важности может использоваться $F$,
+$S$, $W$.
+
+З усього списку вихідних сигналів пошукових агентів координатор використовує
+тільки необхідне йому підмножина. Як координат може використовуватися як
+$ p_c$, так і $ p_e $.
+У якості рівня важливості може використовуватися $ F $, $ S $, $W$.
+В якості першого наближення можна як $ p_\mathrm{id} $ використовувати
+значення $ p_c $ тієї моделі, для якої функція якості максимальна:
+%
+\begin{equation}
+  p_{bcF}
+  =
+  p_{c,i};
+  \quad
+  i : F_i = \max{F_j}, \, j=0 \ldots N-1 .
+  \label{atu:eq:p_bcF}
+\end{equation}
+
+Аналогічно визначаються залежності
+$p_{bcS}$ та $p_{bcW}$.
+Єдиною перевагою даного методу є простота реалізації. При цьому, ніяк не
+використовуються аппроксимирующие здатності агентів. Більш того, залежності
+$ p_{bcA} (t) $ схильні до стрибкоподібним змінам в момент перемикання з однієї моделі
+на іншу. Слід зазначити, що для методів, які використовують одну модель це
+практично єдиний метод визначення
+$p_\mathrm{id}(t)$.
+
+Для того, що б використовувати аппроксимирующие можливості кожного агента, у
+визначенні (\ref{atu:eq:p_bcF}) замість $ p_c $ можна використовувати $ p_e$.
+Відповідні методи отримають позначення $ p_ {beS} $, $ p_ {beS} $ і $ p_{beW} $.
+Такі визначення, на відміну від (\ref{atu:eq:p_bcF}) дозволяють,
+при досить хорошій апроксимації $ q (p) $ принаймні одним кращим агентом,
+реалізувати ідентифікацію для будь-якого
+$ p_o \in [p_{\min} , p_{\max}]$ при нерухомих агентів.
+
+Наступний метод --- реалізація методу COG (Center of gravity, Такагі-Сугено \cite{atu_asau25,atu_csit2015,atu_asau16},)
+використовуваного при дефаззифікації систем нечіткої логіки для всього
+ансамблю:
+%
+\begin{equation}
+  p_{gcF}
+  =
+  \frac{\sum\limits_{i=0}^{N-1} F_{i} p_{i}}
+       {\sum\limits_{i=0}^{N-1} F_{i} }
+  .
+  \label{atu:eq:p_gcF}
+\end{equation}
+%
+Аналогічно визначаються методи
+$p_{gcS}$,
+$p_{gcW}$,
+$p_{geF}$,
+$p_{geS}$ та
+$p_{geW}$.
+
+
+Наступний підхід покликаний зменшити залежність першого від впливу локальних
+екстремумів і кордонів. В цьому випадку визначається модель $ M_{i_{m}} $ ($ M_{c} $) з
+максимальним значенням $ F $, а в оцінці використовується тільки найближча
+околиця цієї моделі:
+%
+\begin{equation}
+  p_{leF}
+  =
+  \frac{ F_{l} p_{l} + F_{c} p_{c} + F_{r} p_{r} }
+       { F_{l}       + F_{c}       + F_{r}       }
+  .
+  \label{atu:eq:p_lcFl}
+\end{equation}
+%
+Аналогічно визначаються методи
+$p_{lcS}$,
+$p_{lcW}$,
+$p_{leF}$,
+$p_{leS}$ та
+$p_{leW}$.
+
+
+Так само в околиці кращого агента можна використовувати інтерполяцію по
+$ F $, аналогічно (\ref{atu:eq:p_eFq}). В позначенні таких методів будемо
+використовувати перший символ ``q'', наприклад $ p_{qeF}$.
+
+Помилки ідентифікації в просторі параметрів для розглянутих підходів позначимо відповідно:
+%
+\begin{equation}
+  e_{gcF} = p_{gcF} - p_o,
+  \quad
+  e_{leF} = p_{leF} - p_o,
+  \quad
+  \ldots
+  \quad
+  e_{leW} = p_{leW} - p_o.
+  \label{atu:eq:e_xx}
+\end{equation}
+%
+
+У даній роботі розглядається набір методів ідентифікації нелінійних динамічних
+систем. При цьому, більшість з них мають загальні властивості, і система
+ідентифікації в цілому складається з ``набору'' модулів і алгоритмів,
+комбінація яких дозволяють вибрати конкретний метод, що підходить для даної
+задачі.
+Пропонується до використання наступна система позначень, послідовно визначає
+компоненти системи ідентифікації, починаючи з агентів.
+
+\begin{enumerate}
+
+  \item
+  Перший символ (``F'', ``q'', ``x'' ) визначає,
+  яка величина використовується кожним агентом для визначення $ p_e $.
+
+  \item
+
+    Другий символ (``l'' --- linear, ``q'' --- quadratic \ldots ) задає спосіб визначення величини $ p_e $ одним агентом.
+
+  \item
+  Третій символ визначає локальну пошукову геометрію, найчастіше --- кількість
+    агентів в в пошуковій групі, наприклад: ``2'' --- пошукова пара, ``3'' --- триплет.
+
+  \item
+    Четвертий символ (``z'' --- zero, ``r'' -- real \ldots),
+    описує поведінку додаткових моделей, які перебувають на кордоні:
+
+  \item
+    П'ятий символ (``c'' --- const, ``l'' --- linear \ldots )
+    позначає вибрану залежність для величини $ f_e $ (або
+    аналогічної величини, якщо $ f_e $ безпосередньо не використовується).
+
+  \item
+    Шостий символ (``o'' --- one, ``F'', ``S'', ``W'') визначає множник,
+    використовуваний для величини $ f_e $ при визначенні динаміки об'єкта.
+
+  \item
+   Сьомий символ (``z'' --- zero, ``v'' --- viscous \ldots)
+    вказує, яким чином величина $ f_t $ (або її еквівалент) впливає на динаміку агента.
+
+  \item
+   Восьмий (``n'' --- none, ``t'' --- triangle \ldots ) символ дозволяє вказати, яке додаткове пошуковий рух реалізує агент.
+
+  \item
+    Дев'ятий символ задає спосіб визначення ідентифікованого параметра по всьому ансамблю:
+    \begin{description}
+
+      \item[b]  --- ``best''
+        --- вибирається найкращий агент без подальшої обробки;
+
+      \item[g]  --- ``global COG'' ---
+        метод ``Center of Gravity'' по всьому ансамблю~(\ref{atu:eq:p_gcF});
+
+      \item[l] --- ``local COG'' ---
+        метод ``Center of Gravity'' по околиці кращого агента;
+
+      \item[q] ---
+        інтерполяція другого порядку в околиці кращого агента~(\ref{atu:eq:p_eFq}).
+
+    \end{description}
+
+  \item
+    Десятий символ (``c'', ``e'') визначає, який з вихідних сигналів пошукового агента використовується.
+
+  \item
+    Одинадцятий символ (``F'', ``S'', ``W'') вказує, яка величина використовується для завдання ваги кожного агента.
+
+
+\end{enumerate}
+%
+Для позначення підмножин методів замість позначення елемента використовується символ ``A'' --- ``any''.
+Якщо виникає потреба вказати конкретний вид критерію, то в кінець даного
+позначення, через точку, додається позначення використовуваного критерію.
+
+Приклад позначень:
+``Fc3zlovngcW.$q_{x^2}$''
+--- метод, агенти якого для оцінювання величини $ p_e $ використовують функцію
+якості і квадратичну апроксимацію за даними кожних трьох сусідніх агентів, 2
+псевдомоделі на кордоні, залежність $ f_e (p_e-p_c) $ --- лінійна, ``в'язка''
+динаміка, одиничний коефіцієнт при цій силі, ``global COG'' для результуючого
+значення параметра по значенням $p_c$ і $W$, критерій
+``$q_{x^2}$''.
+
+
+Якість ідентифікації для процесу в цілому задається мірою:
+%
+\[
+  \overline{e} = \mu( p_o(t), p_\mathrm{id}(t) ),
+  \quad
+  t \in [0;T].
+\]
+
+Конкретний вид міри визначається завданням. Якщо в конкретній постановці
+важливо знати максимальне відхилення ідентифікованого параметра моделі від
+об'єкта, то має сенс вибрати міру $ C[0; T] $ або ж $ R_{\infty}^n$ для
+дискретного представлення:
+%
+\begin{equation}
+  \overline{e_c}(p_o(t),p_\mathrm{id}(t))
+  =
+  \max \big| p_o(t)-p_\mathrm{id}(t) \big|,
+  \quad
+  t \in [0;T].
+  \label{atu:eq:e_c}
+\end{equation}
+
+Більш поширеним є випадок, коли інтерес представляє не максимальне значення
+$ |e(t)| $, а якийсь варіант усереднення цієї величини, наприклад
+%
+\begin{equation}
+  \overline{e_2}(p_o(t),p_\mathrm{id}(t))
+  =
+  \sqrt{ \frac{1}{T} \int\limits_{0}^{T} \big( p_o(t)-p_\mathrm{id}(t) \big)^2 \, \mathrm{d}t },
+  \label{atu:eq:e_2}
+\end{equation}
+
+Саме значення як помилки ідентифікації, так і відповідноі міри ---
+величина розмірна, і в такому вигляді не придатне для незалежного від
+конкретної ситуації оцінювання якості роботи методу. Розглянемо можливі
+величини, що дають можливість привести помилку ідентифікації до безрозмірного
+вигляду. В першу чергу, припустимо, що взагалі не проводимо ніякої
+ідентифікації, а в якості значення параметра використовуємо або геометричний
+центр $ p_{00} $ безлічі $ \mathcal{P} $, або, якщо це з якої-небудь причини
+відомо, точку з максимальним значенням щільності ймовірності. тоді позначимо
+%
+\begin{equation}
+  \overline{e}_{00}
+  =
+  \overline{e}(p_o(t),p_{00})
+  \label{atu:eq:e_00}
+\end{equation}
+
+Відносні помилки для відповідних абсолютних~(\ref{atu:eq:e_xx})
+тоді будуть визначені в такий спосіб:
+%
+\begin{equation}
+  \overline{e}_{rbcF} = \frac{\overline{e}_{bcF}}{\overline{e}_{00}}, \;
+  \overline{e}_{rleS} = \frac{\overline{e}_{leS}}{\overline{e}_{00}}, \;
+  \overline{e}_{rgeW} = \frac{\overline{e}_{geW}}{\overline{e}_{00}},
+  \ldots
+  \overline{e}_{rqeF} = \frac{\overline{e}_{qeF}}{\overline{e}_{00}}.
+  \label{atu:eq:e_rxx}
+\end{equation}
+
+Близькість цих величин до одиниці свідчить про те, що даний метод ідентифікації
+в розглянутих умовах марний. Більш того, при серйозних порушеннях в процесі
+пошуку, наприклад при втраті стійкості, ці величини можуть і перевершувати
+одиницю. Використовуються також методи обезразмеріванія, що враховують
+використання декількох агентів.
+
+Дослідження працездатності та властивостей методів на тестових завданнях.
+
+Для оцінювання можливостей системи ідентифікації відстежувати як гладкі, так і
+стрибкоподібне зміни параметрів, пропонується для кожної тестової системи, якщо
+це можливо, проводити моделювання процесів ідентифікації за умови, що зміна
+значення параметра об'єкта описується одним з наступних виразів:
+%
+\begin{equation}
+  p_o(t) = p_0 +  U_{p} \sign \sin( \omega_{p} t ),
+  \label{atu:eq:po_t_sign}
+\end{equation}
+%
+%
+\begin{equation}
+  p_o(t) = p_0 +  U_{p} \sin( \omega_{p} t ).
+  \label{atu:eq:po_t_sin}
+\end{equation}
+%
+\begin{equation}
+  p_o(t) = p_0 +  U_{p} \frac{t}{T}.
+  \label{atu:eq:po_t_ramp}
+\end{equation}
+
+
+Розглянемо конфігурації рівноважного стану пошукових агентів при застосуванні
+різних пошукових тактик з числа розглянутих. Для даного завдання немає
+необхідності розглядати поведінку координатора пошуку, тому три правих символу
+класифікації тут значення не мають.
+Використовувалося 5 пошукових агентів: $ A_0 \ldots A_4 $, початкові
+координати яких ($ p_ {ci,0} $) були розподілені по пошуковому діапазони
+рівномірно. Залежність $ p_o (t) $ задана як (\ref{atu:eq:po_t_ramp}), при
+цьому величини $ p_o $ і $ U_p $ обрані таки чином, щоб покрити весь робочий
+діапазон: $ p_0 = p_{c0,0} = 20 $, $ U_p = p_ {c4,0} - p_ {c0,0} = 40 $.
+
+
+На рис.~\ref{atu:f:qls_ramp_Fq3rlovnAAF} наведені результати моделювання при використанні групи методів
+``Fq3rlovnAAF''. Слід зазначити, що практично у всьому діапазоні об'єкт
+``супроводжується'' двома агентами, і тільки в області ``передачі'' наступній
+групи це число зростає до трьох. Слід зазначити відсутність коливань. До
+негативних явищ можна буде назвати те, що далекі агенти притискаються до
+кордону виділеної їм області, що викликано використанням одиничного множника у
+визначенні $ f_e $. Також необхідно відзначити збільшення
+``дистанції супроводу'' в околиці точки $ p_o = 40 $, $ t = 10 $.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.70\textwidth]{p3/p/ramp/qls-p_t_pi_Fq3rlovnAAF_ramp.png}
+  }
+  \caption{Рівноважні конфігурації агентів при використанні группи методів  Fq3rlovnAAF}
+  \label{atu:f:qls_ramp_Fq3rlovnAAF}
+\end{figure}
+
+На рис.~\ref{atu:f:qls_ramp_Fq3rlovnAAF} наведені результати моделювання при використанні групи методів
+``ql3rlWvnAAF''.
+Відмінність проявляється в меншому зміщенні віддалених агентів, що, без
+істотної зміни точності повинно призводити до зменшення часу реакції системи на
+стрибкоподібне зміна параметра.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.70\textwidth]{p3/p/ramp/qls-p_t_pi_ql3rlWvnAAF_ramp.png}
+  }
+  \caption{Рівноважні конфігурації агентів при використанні группи методів ql3rlWvnAAF}
+  \label{atu:f:qls_ramp_ql3rlWvnAAF}
+\end{figure}
+
+
+Також булу досліджено рівновіжні конфігурації агентів для
+групп методів
+``Fq3rlFvnAAF'',
+``Fq3rlSvnAAF'',
+``Fq3rlWvnAAF'',
+``ql3rlovnAAF'',
+``ql3rlFvnAAF'' та
+``ql3rlSvnAAF''.
+Встановлено, що в тих випадках, коли для оцінювання $ p_e $ використовується
+метод $ p_{eFq} $, то не має сенсу в якості множника при $ f_e $
+використовувати $ S $ або $ W $. Найкращим вибором в цих умовах будует
+використання значення функції якості $ F $. До того ж, що підтверджується і
+результатами дослідження якості апроксимації $ q (p) $, використання методів,
+які використовують кусково-лінійну апроксимацію, найбільш прийнятний. У цих
+умовах стає виправданим як вищезгаданого множника використовувати
+$ S $ і $ W$, причому останній варіант видається більш виправданим.
+
+
+Рівноважні конфігурації агентів, представлені вище, дають інформацію тільки про
+потенційних якостях систем ідентифікації. В першу чергу, якість визначається
+помилкою ідентифікації. В якості тестової задачі
+використовується~(\ref{atu:eq:q_dem}) з усіма нелінійними членами. При цьому для кожного методу
+проводилася серія обчислювальних експериментів з різним значенням $ p_o $. Інші
+параметри як системи ідентифікації, так і умови експерименти вибиралися таким
+чином, щоб з одного боку, забезпечити квазістаціонарним в кінці експерименту, а
+з іншого --- досягти хорошої швидкості ідентифікації, для надання можливості
+досліджувати динамічні властивості без перенастроювання параметрів.
+Представлення отриманих результатів ускладнюється тим, що з урахуванням тільки
+основних розглянутих елементів в класифікації, виходить 192 можливих методів.
+Тому на одному графіку можна відобразити залежності для восьми методів.
+У авторефераты наведено дві найкращі групи з~24.
+
+Як перший приклад розглянемо групу методів
+``Fq3rlFvnAAF'' (рис.~\ref{atu:f:Fq3rlFvnAAF_scan}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.7\textwidth]{p3/p/scan/qls-p_p_e_Fq3rlFvnAAF_scan.png}
+  }
+  \caption{Залежності $ e (p_o) $ для групи методів Fq3rlFvnAAF в квазістаціонарному випадку}
+  \label{atu:f:Fq3rlFvnAAF_scan}
+\end{figure}
+
+На рис.~\ref{atu:f:ql3rlWvnAAW_scan} наведено залежності для групи методів ql3rlWvnAAW.
+%
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.7\textwidth]{p3/p/scan/qls-p_p_e_ql3rlWvnAAW_scan.png}
+  }
+  \caption{Залежності $ e (p_o) $ для групи методів ql3rlWvnAAW в квазістаціонарному випадку}
+  \label{atu:f:ql3rlWvnAAW_scan}
+\end{figure}
+
+Істотною відмінністю методів ``ql3r\ldots'' є менший загальний рівень
+помилок, а також відсутність похилого учаска залежності $ e (p_o) $ при
+$ p_o \approx 40 $. В околиці цієї точки похідна приймає близьке до нуля значення, і
+методи ``Fq3r\ldots'' не забезпечують належної чутливості в цій області, що
+призводить до зростання помилки ідентифікації.
+Таким чином, в квазістаціонарному випадку існує достатній набір працездатних
+методів. При наявності можливості, слід використовувати методи, які
+використовують величину критерію, на рівні координатора --- $ p_e $, і
+наприклад, $ W $. Вибір інших елементів класифікації повинен проводиться
+виходячи з інших умов, наприклад, вимог до динамічних характеристик системи
+ідентифікації.
+
+Для дослідження динамічних властивостей розглянутих методів ідентифікації без
+прив'язки до конкретного об'єкта, будемо вважати, що для тестової задачі
+характерний час стабілізації критерію значно менше характерних часів процесів
+пошуку.
+Таким чином, будемо розглядати тестове завдання~(\ref{atu:eq:q_dem}),
+заданий повний набір коефіцієнтів, а динаміка параметра описується меандром~(\ref{atu:eq:po_t_sign}).
+При цьому для аналізу буде використовуватися тільки один фронт~$p_o(t)$.
+
+Для оцінки динамічних властивостей методів ідентифікації необхідна природна
+одиниця часу, яка визначається самою системою ідентифікації. В якості такої
+одиниці пропонується використовувати час, за яке агент перетинає всю свою
+робочу смугу, за умови, що $ f_e $ зберігає максимальне можливе значення під
+час руху, іншіми силами нехтуємо. Тоді цей час визначається наступним чином:
+%
+\begin{equation}
+  t_{ua} = \frac{p_r - p_l}{ v_f k_e (p_r - p_l)} = \frac{1}{v_f k_e}.
+  \label{atu:eq:t_ua}
+\end{equation}
+%
+У розглянутих прикладах $t_{ua} = 0.01$.
+
+Динаміка агентів і значень ідентифікованих параметрів для групи методів
+``Fq3rlovnAAW'' і вищевказаних умовах приведена на рис.~\ref{atu:f:Fq3rlovnAAW_sign}.
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.45\textwidth]{p3/p/sign/qls-p_t_pi_m_Fq3rlovnAAW_sign.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{p3/p/sign/qls-p_t_p_m_Fq3rlovnAAW_sign.png}
+  }
+  \caption{Динамика реакції агентів та $p_\mathrm{id}$ на стрибок параметру для групи методів ``Fq3rlovnAAW''}
+  \label{atu:f:Fq3rlovnAAW_sign}
+\end{figure}
+
+Ця група методів характеризується одиничним множником у визначенні $ f_e $, що,
+з одного боку, дає можливість агентам зміщуватися з максимальною швидкістю, з
+іншого --- призводить до того, що ``далекі'' агенти зміщуються сильно,
+займаючи місце поблизу кордону своєї робочої смуги. Як наслідок --- після
+стрибка параметра поблизу положення, відповідного новому значенням, немає
+досить близько розташованого агента, що збільшує час реакції системи.
+
+
+Використання  групи методів ``ql3rlWvnAAW'',
+приводить до більш сприятливої до ідентифікації динамічних систем ситуації
+(рис.~\ref{atu:f:ql3rlWvnAAW_sign}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.45\textwidth]{p3/p/sign/qls-p_t_pi_m_ql3rlWvnAAW_sign.png}
+    \hfill
+    \includegraphics[width=0.45\textwidth]{p3/p/sign/qls-p_t_p_m_ql3rlWvnAAW_sign.png}
+  }
+  \caption{Динамика реакції агентів та $p_\mathrm{id}$ на стрибок параметру для групи методів ``ql3rlWvnAAW''}
+  \label{atu:f:ql3rlWvnAAW_sign}
+\end{figure}
+
+Як вже було зазначено, використання у визначенні $ f_e $ значень $F$, $W$,
+не дозволяє ``далеким'' агентам зміщуватися занадто сильно. Така відмінність
+призводить до того що всі розглянуті методи дуже швидко (у порівнянні з $ t_{ua} $)
+стабілізуються в околиці свого кінцевого значення. Відмінність
+проявляється лише в тому, яке це значення. Методи, які використовують значення
+$ p_c $ агента, характеризуються дещо більшими помилками помилками
+ідентифікації. З іншого боку, методи, які використовують $ p_e $ агентів,
+характеризуються практично однаковою низькою помилкою ідентифікації.
+
+Для даної тестової задачі принципових відмінностей між групами методів
+``ql3rlFvnAAW'', ``ql3rlSvnAAW'' і ``ql3rlWvnAAW'' не спостерігається. Для
+реальних завдань ідентифікації відмінності можуть бути істотніше.
+
+
+
+
+
+
+
 
 \medskip
 \textbf{У третьому розділі}
