--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -3024,7 +3024,7 @@ $p_{leW}$.
 --- метод, агенты которого
 для оценивания величины $p_e$ используют функцию качества и квадратичную аппроксимацию
 по данным каждых трёх соседних агентов, 2 псевдомодели на границе,
-зависимость $f_e(p_e-p_c)$ --- линейная,``вязкая'' динамика,
+зависимость $f_e(p_e-p_c)$ --- линейная, ``вязкая'' динамика,
 единичный коэффициент при этой силе,
 ``global COG'' для результирующего значения параметра по значением $p_c$ и $W$,
 критерий ``$q_{x^2}$'', 5 подвижных агентов.
@@ -3287,7 +3287,7 @@ $\overline{e}_{be}$.
 координатора поиска, поэтому три правых символа классификации
 здесь значения не имеют.
 Использовалось 5 поисковых агентов: $A_0 \ldots A_4$,
-начальные координаты которых ($p_{сi,0}$)
+начальные координаты которых ($p_{ci,0}$)
 были распределены по поисковому диапазоны равномерно.
 Зависимость $p_o(t)$
 задана как (\ref{atu:eq:po_t_ramp}), при этом величины $p_o$ и $U_p$
@@ -3328,7 +3328,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \centerline{
     \includegraphics[width=0.8\textwidth]{p/ramp/qls-p_t_pi_Fq3rlovnAAF_ramp.png}
   }
-  \caption{Равновесные конфигурации агентов при использовании метода Fq3rlovnAAF}
+  \caption{Равновесные конфигурации агентов при использовании группы методов Fq3rlovnAAF}
   \label{atu:f:qls_ramp_Fq3rlovnAAF}
 \end{figure}
 
@@ -3521,7 +3521,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \centerline{
     \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_Fq3rlWvnAAF_scan.png}
   }
-  \caption{Зависимости $e(p_o)$ для методов Fq3rlWvnAAF в квазистационарном случае}
+  \caption{Зависимости $e(p_o)$ для группы методов Fq3rlWvnAAF в квазистационарном случае}
   \label{atu:f:Fq3rlWvnAAF_scan}
 \end{figure}
 
@@ -3543,7 +3543,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \centerline{
     \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_Fq3rlFvnAAF_scan.png}
   }
-  \caption{Зависимости $e(p_o)$ для методов Fq3rlFvnAAF в квазистационарном случае}
+  \caption{Зависимости $e(p_o)$ для группы методов Fq3rlFvnAAF в квазистационарном случае}
   \label{atu:f:Fq3rlFvnAAF_scan}
 \end{figure}
 
@@ -3567,7 +3567,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \centerline{
     \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_Fq3rlFvnAAS_scan.png}
   }
-  \caption{Зависимости $e(p_o)$ для методов Fq3rlFvnAAS в квазистационарном случае}
+  \caption{Зависимости $e(p_o)$ для группы методов Fq3rlFvnAAS в квазистационарном случае}
   \label{atu:f:Fq3rlFvnAAS_scan}
 \end{figure}
 
@@ -3588,7 +3588,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \centerline{
     \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_Fq3rlFvnAAW_scan.png}
   }
-  \caption{Зависимости $e(p_o)$ для методов Fq3rlFvnAAW в квазистационарном случае}
+  \caption{Зависимости $e(p_o)$ для группы методов Fq3rlFvnAAW в квазистационарном случае}
   \label{atu:f:Fq3rlFvnAAW_scan}
 \end{figure}
 
@@ -3608,7 +3608,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \centerline{
     \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_Fq3rlovnAAW_scan.png}
   }
-  \caption{Зависимости $e(p_o)$ для методов Fq3rlovnAAW в квазистационарном случае}
+  \caption{Зависимости $e(p_o)$ для группы методов Fq3rlovnAAW в квазистационарном случае}
   \label{atu:f:Fq3rlovnAAW_scan}
 \end{figure}
 
@@ -3670,7 +3670,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \centerline{
     \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_ql3rlFvnAAF_scan.png}
   }
-  \caption{Зависимости $e(p_o)$ для методов ql3rlFvnAAF в квазистационарном случае}
+  \caption{Зависимости $e(p_o)$ для группы методов ql3rlFvnAAF в квазистационарном случае}
   \label{atu:f:ql3rlFvnAAF_scan}
 \end{figure}
 
@@ -3700,7 +3700,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \centerline{
     \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_ql3rlFvnAAS_scan.png}
   }
-  \caption{Зависимости $e(p_o)$ для методов ql3rlFvnAAS в квазистационарном случае}
+  \caption{Зависимости $e(p_o)$ для группы методов ql3rlFvnAAS в квазистационарном случае}
   \label{atu:f:ql3rlFvnAAS_scan}
 \end{figure}
 
@@ -3728,7 +3728,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
   \centerline{
     \includegraphics[width=0.8\textwidth]{p/scan/qls-p_p_e_ql3rlWvnAAW_scan.png}
   }
-  \caption{Зависимости $e(p_o)$ для методов ql3rlWvnAAW в квазистационарном случае}
+  \caption{Зависимости $e(p_o)$ для группы методов ql3rlWvnAAW в квазистационарном случае}
   \label{atu:f:ql3rlWvnAAW_scan}
 \end{figure}
 
@@ -3770,7 +3770,7 @@ $p_0 = p_{c0,0} = 20$, $ U_p = p_{c4,0} - p_{c0,0} = 40$.
 Часть выводов, например, о предпочтительности $p_e$,
 худших результатах для ``gc'' и ``ge'' полностью аналогичны
 предыдущему случаю. Отличием является отсутствие групп
-методов, десонстрирующих недостаточно адекватные результаты.
+методов, демонстрирующих недостаточно адекватные результаты.
 
 Также важным отличием является практическое совпадение
 результатов, представленных в столбцах ``qe'' и ``be'',
